# trajectory

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: client.py
src/models/: day.py  timeslot.py
src/services/: schedule.py
src/tests/: test_schedule.py
