[project]
name = "trajectory"
version = "0.1.0"
description = ""
authors = [
    {name = "Floccinau",email = "argonavt28@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.isort]
# Global
multi_line_output = 3
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2

# Local
src_paths = ["src"]

skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    ".venv",
    "venv"
]

# Known
known_first_party = ["src"]

# Sections (imports order)
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]